[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["majedalswaeer <majedalswaeer69@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.10b0", allow-prereleases = true}
jupyterlab = {version = "^3.2.1", allow-prereleases = true}
flake8 = {version = "^4.0.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
